--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -12,6 +12,16 @@ on:
         type: string
         required: false
         default: "dev"
+      branch:
+        description: A branch to commit requirements to (defaults to github.head_ref)
+        type: string
+        required: false
+        default: ${{ github.head_ref }}
+      force-rebuild:
+        description: Force a requirements rebuild even if no changes are detected
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   check-requirements:
@@ -26,7 +36,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch }}
 
       - name: Check for requirements changes
         id: detect-changes
@@ -54,9 +64,9 @@ jobs:
           changes=$(git diff "origin/${{ github.event.repository.default_branch }}" --name-only -- "$req_file")
 
           if [ -n "$changes" ]; then
-              echo "Changes found in $req_file on branch ${{ github.head_ref }}."
+              echo "Changes found in $req_file on branch ${{ inputs.branch }}."
           else
-              echo "No changes to $req_file detected on ${{ github.head_ref }}."
+              echo "No changes to $req_file detected on ${{ inputs.branch }}."
           fi
 
           echo "dev-req-file: $dev_req_file"
@@ -66,7 +76,7 @@ jobs:
 
   compile-requirements:
     needs: ['check-requirements']
-    if: needs.check-requirements.outputs.changes != ''
+    if: needs.check-requirements.outputs.changes != '' || inputs.force-rebuild == true
     runs-on: ubuntu-latest
     permissions: write-all
     outputs:
@@ -83,7 +93,7 @@ jobs:
         with:
           # Check out with a PAT so that the workflow can make commits that re-trigger the PR build
           token: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch }}
       
       - name: Set up Python
         if: matrix.type != 'licenses'
@@ -103,7 +113,7 @@ jobs:
         run: |
           # Only check labels on PR events
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            labels=$(gh pr view --json labels "${{ github.head_ref }}")
+            labels=$(gh pr view --json labels "${{ inputs.branch }}")
             # Skip if this version has already been checked
             while IFS= read -r label; do
               if [[ "$label" == "generated requirements [${{ matrix.type }}]" ]]; then
@@ -145,7 +155,9 @@ jobs:
             fi
           fi
           # Add a label to indicate that this version has already been checked
-          gh pr edit --add-label "generated requirements [${{ matrix.type }}]" "${{ github.head_ref }}"
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            gh pr edit --add-label "generated requirements [${{ matrix.type }}]" "${{ inputs.branch }}"
+          fi
 
       - name: Generate third-party licenses
         if: matrix.type == 'licenses'
@@ -154,7 +166,7 @@ jobs:
           # Only check labels on PR events
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             # Skip if this version has already been checked or if there are no 'main' requirements
-            labels=$(gh pr view --json labels "${{ github.head_ref }}")
+            labels=$(gh pr view --json labels "${{ inputs.branch }}")
             while IFS= read -r label; do
               if [[ "$label" == "generated licenses" || ! -e "requirements-3.11.txt" ]]; then
                 echo "Licenses for Python ${{ matrix.type }} have already been evaluated, or there are no required 3rd party packages to generate licenses from."
@@ -182,7 +194,9 @@ jobs:
           pip list | grep howso || true
           pip-licenses --with-authors --with-urls --with-license-file --with-description --format=plain-vertical  > ./LICENSE-3RD-PARTY.txt
           # Add a label to indicate that licenses have already been generated
-          gh pr edit --add-label "generated licenses" "${{ github.head_ref }}"
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            gh pr edit --add-label "generated licenses" "${{ inputs.branch }}"
+          fi
 
       - name: Commit changes
         id: commit-changes
@@ -201,7 +215,7 @@ jobs:
   
   update-labels:
     needs: ['check-requirements', 'compile-requirements']
-    if: needs.check-requirements.outputs.changes != ''
+    if: (needs.check-requirements.outputs.changes != '' || inputs.force-rebuild == true) && github.event_name =='pull_request'
     runs-on: ubuntu-latest
     permissions: write-all
     env:
@@ -212,18 +226,18 @@ jobs:
         with:
           # Check out with a PAT so that the workflow can make commits that re-trigger the PR build
           token: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch }}
 
       - name: Remove labels
         run: |
           automated_labels=("generated requirements [3.8]" "generated requirements [3.9]" "generated requirements [3.10]" "generated requirements [3.11]" "generated licenses")
-          labels=$(gh pr view --json labels "${{ github.head_ref }}")
+          labels=$(gh pr view --json labels "${{ inputs.branch }}")
 
           echo "$labels" | jq -r '.labels[] | .name' | while read -r label; do
             for auto_label in "${automated_labels[@]}"; do
               if [[ "$label" == "$auto_label" ]]; then
                   echo "Found label: $label"
-                  gh pr edit --remove-label "$label" "${{ github.head_ref }}"
+                  gh pr edit --remove-label "$label" "${{ inputs.branch }}"
               fi
             done
           done
