--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -36,3 +36,9 @@ jobs:
     - name: Create PR
       run: |
         gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+        # To trigger Actions, we must make a commit under the PAT
+        sleep 5
+        git config user.name "howso-automation"
+        git config user.email "support@howso.com"
+        git commit --allow-empty -m "Trigger workflows (empty commit)"
+        git push
