--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -84,14 +84,8 @@ jobs:
     if: needs.check-requirements.outputs.changes != '' || inputs.force-rebuild == true
     runs-on: ubuntu-latest
     permissions: write-all
-    outputs:
-      changes-pushed: ${{ steps.commit-changes.outputs.changes-pushed }}
     env:
       GH_TOKEN: ${{ github.token }}
-    strategy:
-      max-parallel: 1  # Necessary to avoid merge conflicts
-      matrix:
-        type: ['3.8', '3.9', '3.10', '3.11', 'licenses']
     steps:
 
       - uses: actions/checkout@v4
@@ -99,102 +93,73 @@ jobs:
           # Check out with a PAT so that the workflow can make commits that re-trigger the PR build
           token: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
           ref: ${{ inputs.branch }}
-      
-      - name: Set up Python
-        if: matrix.type != 'licenses'
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.type }}
-
-      - name: Set up Python (3.11 only)
-        if: matrix.type == 'licenses'
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
 
       - name: Compile requirements
-        if: matrix.type != 'licenses'
         id: compile-requirements
         run: |
-          # Only check labels on PR events
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            labels=$(gh pr view --json labels "${{ inputs.branch }}")
-            # Skip if this version has already been checked
-            while IFS= read -r label; do
-              if [[ "$label" == "generated requirements [${{ matrix.type }}]" ]]; then
-                echo "Requirements for Python ${{ matrix.type }} have already been reevaluated. Skipping."
-                exit 0
-              fi
-            done < <(echo "$labels" | jq -r '.labels[] | .name')
-          fi
           # Pull latest changes
           git pull
-          # Set extra index URL
-          if [[ -n "${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}" ]]; then
-            export PIP_EXTRA_INDEX_URL=https://vsts-build@diveplane.com:${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple
-          fi
-          # Install pip-tools and run pip-compile
-          pip install -U pip pip-tools
-          if [[ "${{ needs.check-requirements.outputs.dev_req_file }}" == "requirements-dev.in" ]]; then
-            # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
-            pip-compile requirements.in --resolver=backtracking --upgrade requirements.in --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-${{ matrix.type }}.txt
-            pip-compile requirements-dev.in --resolver=backtracking --upgrade requirements.in --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-${{ matrix.type }}-dev.txt
-          else
-            # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
-            pip-compile --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-${{ matrix.type }}.txt
-            # Check to see if any requirements were actually generated; don't commit "empty" requirements files
-            if [[ $(wc -l <requirements-${{ matrix.type }}.txt) -le 7 ]]; then
-              cat requirements-${{ matrix.type }}.txt
-              echo "Removing empty requirements-${{ matrix.type }}.txt as it is empty."
-              rm -f requirements-${{ matrix.type }}.txt
+          # Install pyenv & Python build dependencies
+          sudo apt update; sudo apt install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev -y
+          echo "Installing pyenv"
+          curl https://pyenv.run | bash
+          export PYENV_ROOT="$HOME/.pyenv"
+          command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
+          eval "$(pyenv init -)"
+          # Compile requirements
+          declare -a arr=("3.8" "3.9" "3.10" "3.11")
+          for version in "${arr[@]}"; do
+            echo "Installing Python $version"
+            # Install Python
+            pyenv install $version.1
+            pyenv local $version.1
+            python -m pip install --upgrade pip
+            bash -l
+            # Set extra index URL
+            if [[ -n "${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}" ]]; then
+              export PIP_EXTRA_INDEX_URL="https://vsts-build%40diveplane.com:${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
             fi
-            # Generate dev/other extras requirements
-            extras=""
-            for extra in ${{ inputs.extras }}; do
-              extras+="--extra $extra "
-            done
-            echo "Got extras: $extras"
-            # Only generate dev requirements if there are extras
-            if [[ -n "$extras" ]]; then
-              pip-compile $extras --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-${{ matrix.type }}-dev.txt
+            # Install pip-tools and run pip-compile
+            pip install -U pip pip-tools
+            if [[ "${{ needs.check-requirements.outputs.dev_req_file }}" == "requirements-dev.in" ]]; then
+              # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
+              pip-compile requirements.in --resolver=backtracking --upgrade requirements.in --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt
+              pip-compile requirements-dev.in --resolver=backtracking --upgrade requirements.in --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt
+            else
+              # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
+              pip-compile --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt
+              # Check to see if any requirements were actually generated; don't commit "empty" requirements files
+              if [[ $(wc -l <requirements-$version.txt) -le 7 ]]; then
+                cat requirements-$version.txt
+                echo "Removing empty requirements-$version.txt as it is empty."
+                rm -f requirements-$version.txt
+              fi
+              # Generate dev/other extras requirements
+              extras=""
+              for extra in ${{ inputs.extras }}; do
+                extras+="--extra $extra "
+              done
+              echo "Got extras: $extras"
+              # Only generate dev requirements if there are extras
+              if [[ -n "$extras" ]]; then
+                pip-compile $extras --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt
+              fi
             fi
-          fi
-          # Add a label to indicate that this version has already been checked
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            gh pr edit --add-label "generated requirements [${{ matrix.type }}]" "${{ inputs.branch }}"
-          fi
+          done
 
       - name: Generate third-party licenses
-        if: matrix.type == 'licenses'
         id: gen-licenses
         run: |
-          # Only check labels on PR events
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            # Skip if this version has already been checked or if there are no 'main' requirements
-            labels=$(gh pr view --json labels "${{ inputs.branch }}")
-            while IFS= read -r label; do
-              if [[ "$label" == "generated licenses" || ! -e "requirements-3.11.txt" ]]; then
-                echo "Licenses for Python ${{ matrix.type }} have already been evaluated, or there are no required 3rd party packages to generate licenses from."
-                exit 0
-              fi
-            done < <(echo "$labels" | jq -r '.labels[] | .name')
-          fi
-          # Pull latest changes
-          git pull
           rm -f ./LICENSE-3RD-PARTY.txt
           # Set extra index URL
           if [[ -n "${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}" ]]; then
-            export PIP_EXTRA_INDEX_URL=https://vsts-build@diveplane.com:${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple
+            export PIP_EXTRA_INDEX_URL="https://vsts-build%40diveplane.com:${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
           fi
           pip install -r requirements-3.11.txt
           # Do not include Howso software in the 3rd party license file
           pip uninstall amalgam-lang howso-engine howso-synthesizer howso-validator howso-validator-enterprise howso-visuals howso-openapi-client -y
           pip install pip-licenses
           pip-licenses --with-authors --with-urls --with-license-file --with-description --format=plain-vertical  > ./LICENSE-3RD-PARTY.txt
-          # Add a label to indicate that licenses have already been generated
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            gh pr edit --add-label "generated licenses" "${{ inputs.branch }}"
-          fi
 
       - name: Commit changes
         id: commit-changes
@@ -203,39 +168,9 @@ jobs:
             echo "Changes to pip requirements or third-party licenses detected. Making a new commit..."
             git config user.name "howso-automation"
             git config user.email "support@howso.com"
-            git add .
-            git commit -m "Automated requirements/license generation [${{ matrix.type }}]"
+            git add *.txt
+            git commit -m "Automated requirements/license generation"
             git push
-            echo "changes-pushed=$(echo 'true')" >> $GITHUB_OUTPUT
           else
             echo "No changes detected in the repository."
           fi
-  
-  update-labels:
-    needs: ['check-requirements', 'compile-requirements']
-    if: (needs.check-requirements.outputs.changes != '' || inputs.force-rebuild == true) && github.event_name =='pull_request'
-    runs-on: ubuntu-latest
-    permissions: write-all
-    env:
-      GH_TOKEN: ${{ github.token }}
-    steps:
-
-      - uses: actions/checkout@v4
-        with:
-          # Check out with a PAT so that the workflow can make commits that re-trigger the PR build
-          token: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
-          ref: ${{ inputs.branch }}
-
-      - name: Remove labels
-        run: |
-          automated_labels=("generated requirements [3.8]" "generated requirements [3.9]" "generated requirements [3.10]" "generated requirements [3.11]" "generated licenses")
-          labels=$(gh pr view --json labels "${{ inputs.branch }}")
-
-          echo "$labels" | jq -r '.labels[] | .name' | while read -r label; do
-            for auto_label in "${automated_labels[@]}"; do
-              if [[ "$label" == "$auto_label" ]]; then
-                  echo "Found label: $label"
-                  gh pr edit --remove-label "$label" "${{ inputs.branch }}"
-              fi
-            done
-          done
