--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -63,7 +63,7 @@ jobs:
           git status
           changes=$(git diff "origin/${{ github.event.repository.default_branch }}" --name-only -- "$req_file")
 
-          if [[ ! -n "$changes" && ! -e "requirements-3.11.txt" ]]; then
+          if [[ ! -n "$changes" && ! -e "requirements-3.11.txt" && ! -e "requirements-3.11-dev.txt" ]]; then
             echo "Requirements.txt does not exist!"
             changes="no requirements.txt"
           fi
