--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -3,6 +3,10 @@ name: Reusable WF - Create Pull Request
 on:
   workflow_call:
     inputs:
+      dry-run:
+        type: boolean
+        required: false
+        default: false
       branch:
         description: The name of the new branch to create
         type: string
@@ -35,6 +39,10 @@ jobs:
 
     - name: Create PR
       run: |
+        if [[ ${{ inputs.dry-run }} == true ]]; then
+          echo "Dry run with --base=${{ github.event.repository.default_branch }}, --title=${{ inputs.title }}, --body==${{ inputs.body }}"
+          exit 0
+        fi
         gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
         # To trigger Actions, we must make a commit under the PAT
         sleep 5
