Add --upgrade flag to pip-compile

--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -124,8 +124,8 @@ jobs:
             if [[ "${{ needs.check-requirements.outputs.dev_req_file }}" == "requirements-dev.in" ]]; then
               # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
               cat requirements.in
-              pip-compile requirements.in --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
-              pip-compile requirements-dev.in requirements.in --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
+              pip-compile requirements.in --upgrade --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
+              pip-compile requirements-dev.in requirements.in --upgrade --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
             else
               # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
               pip-compile --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
