--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -49,7 +49,11 @@ jobs:
           echo "Dry run with --base=${{ github.event.repository.default_branch }}, --title=${{ inputs.title }}, --body==${{ inputs.body }}"
           exit 0
         fi
-        gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+        if [[ -n "$repo" ]]; then
+          gh pr create --repo "${{ inputs.repo }}" --base "main" --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+        else
+          gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+        fi
         # To trigger Actions, we must make a commit under the PAT
         sleep 5
         git config user.name "howso-automation"
