--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -50,6 +50,7 @@ jobs:
           exit 0
         fi
         if [[ -n "${{ inputs.repo }}" ]]; then
+          export GH_TOKEN=${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
           gh pr create --repo "${{ inputs.repo }}" --base "main" --title "${{ inputs.title }}" --body "${{ inputs.body }}"
         else
           gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
