--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -48,7 +48,7 @@ jobs:
           echo "Dry run with --base=${{ github.event.repository.default_branch }}, --title=${{ inputs.title }}, --body==${{ inputs.body }}"
           exit 0
         fi
-        if [[ -n ${{ inputs.repo }} ]]; then
+        if [[ -n "${{ inputs.repo }}" ]]; then
           export GH_TOKEN=${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
           gh pr create --repo "${{ inputs.repo }}" --base "main" --title "${{ inputs.title }}" --body "${{ inputs.body }}"
         else
