--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -58,6 +58,11 @@ jobs:
           pip download -r requirements-3.11.txt -d ./dist || true
           # Remove upstream Howso packages since we don't want these to be scanned
           pip uninstall amalgam-lang howso-engine howso-synthesizer howso-validator howso-validator-enterprise howso-visuals howso-openapi-client -y
+          declare -a arr=("amalgam_lang" "howso_engine" "howso_synthesizer" "howso_validator" "howso_validator_enterprise" "howso_visuals" "howso_openapi_client")
+          for PKG in "${arr[@]}"; do
+            rm -f ./dist/$PKG*
+          done
+          ls ./dist
 
       - uses: jfrog/setup-jfrog-cli@v3
         if: steps.check-requirements.outputs.changes != ''
