--- a/.github/workflows/run-external.yml
+++ b/.github/workflows/run-external.yml
@@ -51,12 +51,12 @@ jobs:
       
       - name: Check cached workflow
         id: check-cached
-        if: inputs.override == '' && inputs.no-cache == false
+        if: inputs.override == '' && inputs.check-cache
         run: |
           run=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ inputs.owner }}/${{ inputs.repo }}/actions/workflows/create-branch-build.yml/runs)
+            /repos/${{ inputs.owner }}/${{ inputs.repo }}/actions/workflows/build.yml/runs)
 
           gh repo clone ${{ inputs.owner }}/${{ inputs.repo }}
 
